<resources>

    <string name="app_name">Notebook</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_ads">Ads</string>
    <string name="title_notebooks">Notebooks</string>
    <string name="title_storage">Storage</string>
    <string name="title_style">Style</string>
    <string name="title_colour">Colour</string>
    <string name="title_theme">Theme</string>
    <string name="title_settings">Settings</string>
    <string name="title_search">Search</string>

    <string name="option_toggle_ads">Toggle ad display mode</string>
    <string name="option_remove_ads">Remove Ads + Chroma Theme</string>
    <string name="option_manage_notebooks">Manage notebooks</string>
    <string name="option_clear_data">Clear stored data</string>
    <string name="option_light">Light</string>
    <string name="option_dark">Dark</string>
    <string name="option_primary">Primary</string>
    <string name="option_secondary">Secondary</string>
    <string name="option_accent">Accent</string>
    <string name="option_reset_theme">Reset theme colours</string>
    <string name="option_preview">Show Preview</string>
    <string name="option_temp">Temporary Note</string>
    <string name="option_delete">Delete</string>
    <string name="option_all">All</string>
    <string name="option_current">Current</string>
    <string name="option_temp_timer">Temporary Note timer</string>

    <string name="label_red">R</string>
    <string name="label_green">G</string>
    <string name="label_blue">B</string>
    <string name="label_hex">6-Char Hex:</string>
    <string name="label_old_colour">Old</string>
    <string name="label_new_colour">New</string>
    <string name="label_done">Done</string>

    <string name="menu_make_temp">Flag temporary</string>
    <string name="menu_make_perm">Flag permanent</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_toggle_preview_on">Turn on preview</string>
    <string name="menu_toggle_preview_off">Turn off preview</string>

    <string name="hint_note_title">Note Title</string>
    <string name="hint_note_text">Note Text</string>
    <string name="hint_notebook_name">Notebook Name</string>
    <string name="hint_opt_password">Password (Optional)</string>
    <string name="hint_req_password">Password</string>
    <string name="hint_show_native">Showing native ads</string>
    <string name="hint_no_ads">Ads removed! Thank you!</string>
    <string name="hint_ad_removal_price">$0.99 CAD</string>
    <string name="hint_clear_permanent">Clearing data is permanent; Notes cannot be recovered.</string>
    <string name="hint_enter_password">Enter password to open</string>
    <string name="hint_edit_theme">Tap to edit theme</string>
    <string name="hint_clear_selection">Clear selection</string>
    <string name="hint_search_all">Search will search all notes in all notebooks</string>
    <string name="hint_search_current">Search will limit itself to the current notebook</string>
    <string name="hint_theme_apply">Theme changes will apply after restarting the app</string>

    <string name="message_cannot_undo">This action can\'t be un-done.\n\n are you sure you\'d like to continue?</string>

    <string name="error_no_name">Notebook requires a name</string>
    <string name="error_pass_mismatch">Password does not match</string>

    <string-array name="sort_options">
        <item>Modified Asc (Default)</item>
        <item>Modified Desc</item>
        <item>Created Asc</item>
        <item>Created Desc</item>
        <item>A - Z</item>
        <item>Z - A</item>
    </string-array>

</resources>
