<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_app" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?attr/background_app" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:textColor="?attr/text_normal"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/title_ads" />

            <LinearLayout
                android:id="@+id/buy_upgrade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:orientation="horizontal"
                android:clickable="true"
                android:background="?attr/selectableItemBackground" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="?attr/text_normal"
                    android:text="@string/option_remove_ads"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/text_normal"
                    android:text="@string/hint_ad_removal_price"/>

            </LinearLayout>

            <TextView
                android:id="@+id/ads_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:textColor="?attr/text_faded"
                android:text="@string/hint_show_native" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:paddingTop="12dp"
                android:textColor="?attr/text_normal"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/title_notebooks" />

            <LinearLayout
                android:id="@+id/manage_notebooks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:orientation="horizontal"
                android:clickable="true"
                android:background="?attr/selectableItemBackground" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:textColor="?attr/text_normal"
                    android:text="@string/option_manage_notebooks"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="?attr/ic_more" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:paddingTop="12dp"
                android:textColor="?attr/text_normal"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/title_storage" />

            <LinearLayout
                android:id="@+id/temp_timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:clickable="true"
                android:background="?attr/selectableItemBackground" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:textColor="?attr/text_normal"
                    android:text="@string/option_temp_timer" />

                <TextView
                    android:id="@+id/temp_time_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="?attr/text_normal" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/clear_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:orientation="horizontal"
                android:clickable="true"
                android:background="?attr/selectableItemBackground" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:textColor="?attr/text_normal"
                    android:text="@string/option_clear_data"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="?attr/ic_delete" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="12dp"
                android:textColor="?attr/text_faded"
                android:text="@string/hint_clear_permanent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:paddingTop="12dp"
                android:textColor="?attr/text_normal"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/title_search" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp" >

                <RadioButton
                    android:id="@+id/option_all"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/text_normal"
                    android:text="@string/option_all" />

                <RadioButton
                    android:id="@+id/option_current"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:textColor="?attr/text_normal"
                    android:text="@string/option_current" />

            </RadioGroup>

            <TextView
                android:id="@+id/search_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:textColor="?attr/text_faded"
                android:text="@string/hint_search_current" />

            <!-- Space to ensure full scroll -->
            <View
                android:layout_width="match_parent"
                android:layout_height="40dp" />

        </LinearLayout>

    </ScrollView>

    <include layout="@layout/toolbar_basic" />

    <FrameLayout
        android:id="@+id/manage_notebooks_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</android.support.design.widget.CoordinatorLayout>